shallow water and slopes